feat: Gelişmiş API arama ve kullanıcı deneyimi iyileştirmeleri

--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@
         </div>
     </div>
 
+    <div id="toast-container"></div>
+
     <script src="script.js" defer></script>
     <script>
         if ('serviceWorker' in navigator) {
